fdo#53533: don't seek to bogus offset

Change-Id: I27d056bdb8329dce302f2737bad5c5dc55791e74
Signed-off-by: Andras Timar <atimar@suse.com>